Sat 15 May 2021 Yasuhiro Яша Asaka <yasuhiro.asaka@grauwoelfchen.net>
	* Add .renovaterc.json
	* Release v0.0.14
	* Fix an interface for flash
	* Fix an issue by plugin-css-only on file generation
	* Update dependencies
	* Remove dependabot.yml

Tue 11 May 2021 Yasuhiro Яша Asaka <yasuhiro.asaka@grauwoelfchen.net>
	* Enable test coverage by using Jest
	* Remove a config of Rollup for test (Use directly Jest)

Sun 09 May 2021 Yasuhiro Яша Asaka <yasuhiro.asaka@grauwoelfchen.net>
	* Release v0.0.13
	* Update rollup plugins
	* Update a node-polyfill package for testing

Wed 05 May 2021 Yasuhiro Яша Asaka <yasuhiro.asaka@grauwoelfchen.net>
	* Add a screenshot in README.md
	* Release v0.0.12
	* Make fetchNamespaces() async
	* Add a test for NamespaceIndex with using mocked axios
	* Release v0.0.11

Tue 04 May 2021 Yasuhiro Яша Asaka <yasuhiro.asaka@grauwoelfchen.net>
	* Add Namespace' detail view
	* Release v0.0.10

Sat 01 May 2021 Yasuhiro Яша Asaka <yasuhiro.asaka@grauwoelfchen.net>
	* Improve style of sidebar

Sun 25 Apr 2021 Yasuhiro Яша Asaka <yasuhiro.asaka@grauwoelfchen.net>
	* Release v0.0.8 and v0.0.9
	* Remove .tool

Fri 07 Aug 2020 Yasuhiro Яша Asaka <yasuhiro.asaka@grauwoelfchen.net>
	* Update Node.js version to 12.18.3

Thu 23 Jul 2020 Yasuhiro Яша Asaka <yasuhiro.asaka@grauwoelfchen.net>
	* Setup experimental release using App Engine

Fri 26 Jun 2020 Yasuhiro Яша Asaka <yasuhiro.asaka@grauwoelfchen.net>
	* Add tests using Jest

Sun 21 Jun 2020 Yasuhiro Яша Asaka <yasuhiro.asaka@grauwoelfchen.net>
	* Add sidebar

Sun 05 Apr 2020 Yasuhiro Яша Asaka <yasuhiro.asaka@grauwoelfchen.net>
	* Update required Node.js version as >= 0.12.6

Sun 29 Mar 2020 Yasuhiro Яша Asaka <yasuhiro.asaka@grauwoelfchen.net>
	* Update tslint 5.x -> 6.x (due to vulnerable dependencies)

Sun 24 Nov 2019 Yasuhiro Яша Asaka <yasuhiro.asaka@grauwoelfchen.net>
	* Add .node-version (12.13.0)

Mon 10 Jun 2019 Yasuhiro Яша Asaka <yasuhiro.asaka@grauwoelfchen.net>